tests/good/basic/division.spl
int f(int n)
{
    return n / 3;
}

int g(int n)
{
    return n % 3;
}

int main()
{
    printInt(f(10));
    printInt(g(10));
    return 0;
}
