tests/bad/basic/function_wrong_return_type.spl
int f(int n)
{
    return n < 10;
}

int main()
{
    return 0;
}
